<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Google Image Searcher</string>
    <string name="query_hint">Enter Search Query</string>
    <string name="search">Search</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="activity_search_settings">Advanced Search Setting</string>
    <string name="enter_site">Enter Site</string>
    <string name="site_filter">Site Filter</string>
    <string name="image_type">Type</string>
    <string name="image_color">Color</string>
    <string name="image_size">Size</string>
    <string name="advanced_search_options">Advanced Search Options</string>
    <string-array name="image_type">
        <item>clipart</item>
        <item>photo</item>
    </string-array>
     <string-array name="image_color">
        <item>pink</item>
        <item>orange</item>
        <item>white</item>
    </string-array>
        <string-array name="image_size">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
    </string-array>
        <string name="save">Save</string>
        <string name="title">title</string>
</resources>
